--- a/Deploy/neogrip.service
+++ b/Deploy/neogrip.service
@@ -12,8 +12,8 @@ EnvironmentFile=/etc/neogrip/secrets.env
 
 ExecStart=/usr/bin/python3 /opt/neogrip/main.py
 
-Restart=on-failure
-RestartSec=2
+#Restart=on-failure
+#RestartSec=2
 
 NoNewPrivileges=true
 PrivateTmp=true
